@@ -1,5 +1,4 @@
 ---
-log_server : 'syslog.bar.baz'
 client_nets :
   - 1.2.3.4
   - 5.6.7.8
